--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			
 			<div id="content-1" class="content content--switch content--switch-current">
 				<h2 class="content__title">Viral Jain</h2>
-				<div class="content__subtitle">Innovative Full Stack Web Developer | Transforming Ideas into Seamless Digital Experiences | Passionate about Collaboration and Continuous Learning.</div>
+				<div class="content__subtitle">Innovative Full Stack Web Developer | Transforming Ideas into Seamless Digital Experiences.</div>
 				<div class="top_social_profile">
 					<ul>
 						<li><a href="#" class="top_f_facebook"><img src="img/fb.svg" alt="" /></a></li>
