--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<div class="row">					
 						<div class="col-lg-6 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
 							<div class="about_img">
-								<img src="img/profile-pic.png" class="img-fluid" alt="profile-picture" />
+								<img src="img/profile-pic.jpg" class="img-fluid" alt="profile-picture" />
 							</div>
 						</div><!-- / END COL -->		
 						<div class="col-lg-6 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">	
