Search Engine Optimized

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Viral Jain - Personal portfolio</title>
-		<meta name="description" content="Viral Jain - Personal portfolio">
-		<meta name="keywords" content="Viral Jain - Personal portfolio">
-		<meta name="author" content="Viral Jain">
+		<title>Viral Jain - Expert Full Stack Web Developer | JavaScript | React | Node.js</title>
+		<meta name="description" content="View the portfolio of Viral Jain, an expert full stack web developer with 3+ years of experience in JavaScript, React, Node.js, MongoDB, and other modern web technologies. Viral specializes in crafting high-performing, responsive web applications and smooth user experiences.">
+		<meta name="keywords" content="Viral Jain, Full Stack Web Developer, JavaScript Developer, React Developer, Node.js Developer, MongoDB, Web Development Portfolio, Web Developer Portfolio, Full Stack Developer Portfolio">
+		<meta name="author" content="Viral Jain - Expert Full Stack Web Developer"> 
+		<meta name="robots" content="index, follow">
+		<meta name="googlebot" content="index, follow">
+		<meta name="revisit-after" content="7 days">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico">
 		<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
