Updated the about section

--- a/index.html
+++ b/index.html
@@ -66,19 +66,21 @@
 						<div class="col-lg-6 col-sm-12 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">	
 							<div class="about_info">
 								<h4>About Me</h4>
-								<h3>Awared designer 12+ Years of experience.</h3>
-								<p>Bootstrap has reached wide-spread adoption among developers and The person who designed and built Envato. He's a programmer and web developer who enjoys a diverse array of hobbies, including building web apps. many have expressed their desire for design customization beyond the default styles. This marketplace was created to solve.</p>
-								<div class="basic-info">
-									<div class="single-basic-info">
-										<p>Email: <br /><span>info@example.com</span></p>
-									</div>
-									<div class="single-basic-info">
-										<p>Phone: <br /><span>+456 789 321</span></p>
-									</div>
-									<div class="single-basic-info">
-										<p>Nationality: <br /><span>Whiteman Street USA</span></p>
-									</div>				
-								</div>												
+								<h3>Expert Full Stack Developer with Over 3 Years of Experience</h3>
+								<p>I'm Viral Jain, an innovative full stack developer with over 12 years of experience building and designing responsive web applications. Skilled in JavaScript, React, Node.js, MongoDB and various other modern web technologies, I create seamless user experiences that beautifully combine design and functionality.</p>
+								<p>I thrive on taking projects from ideation to deployment, collaborating closely with clients and team members to bring visions to life. Continuously upgrading my skills with the latest frameworks and methodologies, I take pride in crafting pixel-perfect front ends, developing robust and scalable backends, and implementing complex features with ease.</p> 
+								<p>When I'm not coding, you can find me mentoring aspiring developers, staying on top of industry trends, contributing to open source projects, or spending time with family and friends.</p>
+									<div class="basic-info">
+										<div class="single-basic-info">
+											<p>Email: <br /><span>veerljain1234@gmail.com</span></p>
+										</div>
+										<div class="single-basic-info">
+											<p>Phone: <br /><span>+91 7412932564</span></p> 
+										</div>
+										<div class="single-basic-info">
+										<p>Location: <br /><span>Vadodara, India</span></p>
+										</div>
+									</div>												
 							</div>
 						</div><!-- / END COL -->
 					</div><!-- / END ROW -->
