added rich text

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<div class="about_info">
 								<h4>About Me</h4>
 								<h3>Expert Full Stack Developer with Over 3 Years of Experience</h3>
-								<p>I'm Viral Jain, an innovative full stack developer with over 12 years of experience building and designing responsive web applications. Skilled in JavaScript, React, Node.js, MongoDB and various other modern web technologies, I create seamless user experiences that beautifully combine design and functionality.</p>
+								<p>I'm Viral Jain, an innovative full stack developer with over 3 years of experience building and designing responsive web applications. Skilled in JavaScript, React, Node.js, MongoDB and various other modern web technologies, I create seamless user experiences that beautifully combine design and functionality.</p>
 								<p>I thrive on taking projects from ideation to deployment, collaborating closely with clients and team members to bring visions to life. Continuously upgrading my skills with the latest frameworks and methodologies, I take pride in crafting pixel-perfect front ends, developing robust and scalable backends, and implementing complex features with ease.</p> 
 								<p>When I'm not coding, you can find me mentoring aspiring developers, staying on top of industry trends, contributing to open source projects, or spending time with family and friends.</p>
 									<div class="basic-info">
@@ -831,5 +831,52 @@
 		<script src="js/venobox.min.js"></script>		
 		<script src="js/menu.js"></script>
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>		
+		<script type="application/ld+json">
+			{
+			  "@context": "https://viraljain7.github.io",
+			  "@type": "Person",
+			  "name": "Viral Jain",
+			  "image": "https://viraljain7.github.io/img/profile-pic.jpg",
+			  "jobTitle": "Full Stack Web Developer",
+			  "description": "Viral Jain is an innovative full stack developer with over 3 years of experience building and designing responsive web applications. Skilled in JavaScript, React, Node.js, MongoDB and various other modern web technologies, I create seamless user experiences that beautifully combine design and functionality.
+
+			  ",
+			  "alumniOf": {
+				"@type": "College",
+				"name": "Parul Institute of Engineering and Technology",
+				"sameAs": "https://paruluniversity.ac.in"
+			  },
+			  "address": {
+				"@type": "PostalAddress",
+				"streetAddress": "Near Patwari House, Garba Chowk",
+				"addressLocality": "Sadla",
+				"addressRegion": "RAJ",
+				"postalCode": "314022",
+				"addressCountry": "IN"
+			  },
+			  "telephone": "+91 7412932564",
+			  "email": "veerljain1234@gmail.com",
+			  "birthDate": "2003-09-01",
+			  "knowsAbout": [
+			  "Web Development",
+			  "HTML",
+			  "CSS",
+			  "JavaScript",
+			  "JavaScript, HTML5, CSS3",
+			  "React, Angular, Vue.js",
+			  "Node.js, Express, MongoDB, MySQL",
+			  "RESTful APIs, GraphQL",
+			  "Version Control (Git, GitHub)",
+			  "Agile Methodologies",
+			  "Responsive Design",
+			  "Unit Testing, Debugging",
+			  "Cloud Platforms (AWS, Azure)"
+			  ],
+			  "sameAs" : [
+				"https://www.linkedin.com/in/jainviral",
+				"https://twitter.com/viral_jain_754"
+			  ]
+			}
+			</script>
 	</body>
 </html>
