--- a/index.html
+++ b/index.html
@@ -185,62 +185,62 @@
 			<div id="content-3" class="content content--switch">
 			   <div class="container">
 					<div class="section-title wow zoomIn">
-						<h4>Top services</h4>
-						<h2>Services I provide.</h2>
+						<h4>Certifications</h4>
+						<!-- <h2>Certifications i accompolished.</h2> -->
 					</div>		
 					<div class="row">									
 						<div class="col-lg-4 col-sm-6 col-xs-12">
 							<div class="single_feature_one">
 								<div class="sf_top">
 									<span class="ti-flag ss_one"></span>
-									<h2><a href="#" data-bs-toggle="modal" data-bs-target="#serviceModal">Digital <br />Marketing</a></h2>
+									<h2><a href="#" data-bs-toggle="modal" data-bs-target="#serviceModal">Meta Back-End Developer Certificate</a></h2>
 								</div>
-								<p>Ajker modhe order confirm korun. na hole pore postaben. stock shimito. deri korle late hobe.</p>
+							<p>Candidates are required to complete all self-paced courses on Coursera and complete and pass a capstone project.</p>
 							</div>					
 						</div><!-- END COL -->								
 						<div class="col-lg-4 col-sm-6 col-xs-12">
 							<div class="single_feature_one">
 								<div class="sf_top">
 									<span class="ti-pencil-alt ss_two"></span>
-									<h2><a href="#"  data-bs-toggle="modal" data-bs-target="#serviceModal2">Create <br />Content</a></h2>
+									<h2><a href="#"  data-bs-toggle="modal" data-bs-target="#serviceModal2">Google UX Design Certificate</a></h2>
 								</div>	
-								<p>Ajker modhe order confirm korun. na hole pore postaben. stock shimito. deri korle late hobe.</p>
+								<p>Successfully complete the 7-course Google UX Design Professional Certificate program available on Coursera.org.</p>
 							</div>					
 						</div><!-- END COL -->								
 						<div class="col-lg-4 col-sm-6 col-xs-12">
 							<div class="single_feature_one">
 								<div class="sf_top">
 									<span class="ti-light-bulb ss_three"></span>
-									<h2><a href="#" data-bs-toggle="modal" data-bs-target="#serviceModal3">UI/UX <br />Design</a></h2>
+									<h2><a href="#" data-bs-toggle="modal" data-bs-target="#serviceModal3">Google Digital Marketing & E-commerce Certificate</a></h2>
 								</div>	
-								<p>Ajker modhe order confirm korun. na hole pore postaben. stock shimito. deri korle late hobe.</p>
+								<p>Successfully complete the 7-course Digital Marketing & E-commerce Certificate Professional Certificate program available on Coursera.org.</p>
 							</div>					
 						</div><!-- END COL -->								
 						<div class="col-lg-4 col-sm-6 col-xs-12">
 							<div class="single_feature_one">
 								<div class="sf_top">
 									<span class="ti-desktop ss_four"></span>
-									<h2><a href="#" data-bs-toggle="modal" data-bs-target="#serviceModal4">Website <br /> Design</a></h2>
+									<h2><a href="#" data-bs-toggle="modal" data-bs-target="#serviceModal4">Google IT Automation Certificate</a></h2>
 								</div>	
-								<p>Ajker modhe order confirm korun. na hole pore postaben. stock shimito. deri korle late hobe.</p>
+								<p>Successfully complete the 6-course Google IT Automation Professional Certificate program available on Coursera.org.</p>
 							</div>					
 						</div><!-- END COL -->								
 						<div class="col-lg-4 col-sm-6 col-xs-12">
 							<div class="single_feature_one">
 								<div class="sf_top">
 									<span class="ti-world ss_five"></span>
-									<h2><a href="#"  data-bs-toggle="modal" data-bs-target="#serviceModal5">Web Development</a></h2>
+									<h2><a href="#"  data-bs-toggle="modal" data-bs-target="#serviceModal5">Meta Front-End Developer Certificate</a></h2>
 								</div>		
-								<p>Ajker modhe order confirm korun. na hole pore postaben. stock shimito. deri korle late hobe.</p>
+								<p>Candidates are required to complete all self-paced courses on Coursera and complete and pass a capstone project.</p>
 							</div>					
 						</div><!-- END COL -->								
 						<div class="col-lg-4 col-sm-6 col-xs-12">
 							<div class="single_feature_one">
 								<div class="sf_top">
 									<span class="ti-package ss_six"></span>
-									<h2><a href="#"  data-bs-toggle="modal" data-bs-target="#serviceModal6">App Development</a></h2>
+									<h2><a href="#"  data-bs-toggle="modal" data-bs-target="#serviceModal6">Open Source Software Development,<br> Linux and Git Specialization</a></h2>
 								</div>		
-								<p>Ajker modhe order confirm korun. na hole pore postaben. stock shimito. deri korle late hobe.</p>
+								<p>Complete all four courses in the Specialization.</p>
 							</div>					
 						</div><!-- END COL -->	
 						<div  tabindex="0" class="modal fade" id="serviceModal">
