--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 							<div class="single_feature_one">
 								<div class="sf_top">
 									<span class="ti-light-bulb ss_three"></span>
-									<h2><a href="#" data-bs-toggle="modal" data-bs-target="#serviceModal3">Google Digital Marketing & E-commerce Certificate</a></h2>
+									<h2><a href="#" data-bs-toggle="modal" data-bs-target="#serviceModal3">Digital Marketing & E-commerce</a></h2>
 								</div>	
 								<p>Successfully complete the 7-course Digital Marketing & E-commerce Certificate Professional Certificate program available on Coursera.org.</p>
 							</div>					
@@ -238,7 +238,7 @@
 							<div class="single_feature_one">
 								<div class="sf_top">
 									<span class="ti-package ss_six"></span>
-									<h2><a href="#"  data-bs-toggle="modal" data-bs-target="#serviceModal6">Open Source Software Development,<br> Linux and Git Specialization</a></h2>
+									<h2><a href="#"  data-bs-toggle="modal" data-bs-target="#serviceModal6">Open Source Software Development</a></h2>
 								</div>		
 								<p>Complete all four courses in the Specialization.</p>
 							</div>					
