--- a/index.html
+++ b/index.html
@@ -813,8 +813,8 @@
 					<div class="grim__item-img grim__item-img--2"></div>
 					<a href="#content-3" class="grim__link grim__item-content">
 						<div class="grim__item-inner">
-							<h3 class="grim__item-title">Services</h3>
-							<span class="grim__item-desc">Service I provide</span>
+							<h3 class="grim__item-title">Certifications</h3>
+							<span class="grim__item-desc">Certificate I Own</span>
 						</div>
 					</a>
 					<div class="grim__item-bg grim__item-bg-cover grim__item-bg--7"></div>
