--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
 										<div class="single-basic-info">
 											<p>Email: <br /><span>veerljain1234@gmail.com</span></p>
 										</div>
-										<div class="single-basic-info">
-											<p>Phone: <br /><span>+91 7412932564</span></p> 
-										</div>
-										<div class="single-basic-info">
+										<!-- <div class="single-basic-info">
+											<p>Phone: <br /><span>+91 74129 32564</span></p> 
+										</div> -->
+										<!-- <div class="single-basic-info">
 										<p>Location: <br /><span>Vadodara, India</span></p>
-										</div>
+										</div> -->
 									</div>												
 							</div>
 						</div><!-- / END COL -->
@@ -711,24 +711,22 @@
 						<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.1s" data-wow-offset="0">
 							<div class="single_address">
 								<i class="ti-map"></i>
-								<h4>Our Location</h4>
-								<p>3481 Melrose Place, Beverly Hills <br /> CA 90210</p>
+								<h4>My Location</h4>
+								<p>Vadodara, Gujarat <br /> IN 390001</p>
 							</div>
 						</div><!-- END COL -->
 						<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s" data-wow-offset="0">
 							<div class="single_address sabr">
 								<i class="ti-mobile"></i>
 								<h4>Telephone</h4>
-								<p>(+1) 517 397 7100</p>
-								<p>(+1) 411 315 8138</p>
+								<p>(+91) 74129 32564</p>
 							</div>
 						</div><!-- END COL -->
 						<div class="col-lg-4 col-sm-4 col-xs-12 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s" data-wow-offset="0">
 							<div class="single_address">
 								<i class="ti-email"></i>
 								<h4>Send email</h4>
-								<p>Info@example.com</p>
-								<p>admin@example.com</p>
+								<p>veerljain1234@gmail.com</p>
 							</div>
 						</div><!-- END COL -->			  
 					</div><!--- END ROW -->
