contact sec color

--- a/index.html
+++ b/index.html
@@ -191,11 +191,11 @@
                   <p>Email: <br /><span>veerljain1234@gmail.com</span></p>
                 </div>
                 <!-- <div class="single-basic-info">
-											<p>Phone: <br /><span>+91 74129 32564</span></p> 
-										</div> -->
-                <!-- <div class="single-basic-info">
-										<p>Location: <br /><span>Vadodara, India</span></p>
-										</div> -->
+                  <p>Phone: <br /><span>+91 74129 32564</span></p>
+                </div>
+                <div class="single-basic-info">
+                  <p>Location: <br /><span>Vadodara, India</span></p>
+                </div> -->
               </div>
             </div>
           </div>
